<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="horizontal"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_style_choice_screen_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gameStyleLayoutBg"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:id="@+id/gameStyleChoiceScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/gameStyleChoiceScreenTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/gameStyleLabelText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="50sp" />

            <Button
                android:id="@+id/gameStyleChoiceSinglePlayerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gameStyleChoiceScreenTextView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/single_player_button"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/singlePlayerButtonText"
                android:textSize="36sp" />

            <Button
                android:id="@+id/gameStyleChoiceMultiPlayerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gameStyleChoiceSinglePlayerButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:background="@drawable/multi_player_button"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/MultiPlayerButtonText1"
                android:textSize="38sp" />

            <TextView
                android:id="@+id/gameStyleChoiceMultiPlayerButtonTextView"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_alignStart="@+id/gameStyleChoiceMultiPlayerButton"
                android:layout_alignTop="@+id/gameStyleChoiceMultiPlayerButton"
                android:layout_alignEnd="@+id/gameStyleChoiceMultiPlayerButton"
                android:layout_alignBottom="@+id/gameStyleChoiceMultiPlayerButton"
                android:layout_marginStart="60dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="20dp"
                android:elevation="10dp"
                android:fontFamily="sans-serif-light"
                android:text="Requires Bluetooth"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
