<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Level1LayoutBg">

    <RelativeLayout
        android:id="@+id/level1RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/levelsHeaderLayout"
            layout="@layout/levels_header_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/singlePlayerLevel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level1RelativeLayout">

        <TextView
            android:id="@+id/Level1InstructionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-20dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/level1Instruction"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/additionButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="310dp"
            android:backgroundTint="#FFFFFF"
            android:visibility="visible"
            app:srcCompat="@drawable/addition_icon" />

        <ImageButton
            android:id="@+id/subtractionButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="220dp"
            android:backgroundTint="#FFFFFF"
            android:visibility="visible"
            app:srcCompat="@drawable/subtraction_icon" />

        <ImageButton
            android:id="@+id/multiplicationButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="130dp"
            android:backgroundTint="#FFFFFF"
            android:visibility="visible"
            app:srcCompat="@drawable/multiplication_icon" />

        <ImageButton
            android:id="@+id/divisionButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#FFFFFF"
            android:visibility="visible"
            app:srcCompat="@drawable/division_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/singlePlayerLevel1QuestionArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singlePlayerLevel1"
        app:layout_constraintVertical_bias="0.0">

        <!--        First Question -->
        <TextView
            android:id="@+id/level1QuestionProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@id/level1ProgressTotal"
            android:fontFamily="sans-serif-condensed-light"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/level1ProgressTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/level1Progress"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/level1QuestionParameter1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="90dp"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="textStart"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/level1QuestionOperator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="95dp"
            android:layout_toStartOf="@+id/level1QuestionParameter2"
            android:layout_toEndOf="@+id/level1QuestionParameter1"
            android:text="@string/questionMark"
            android:textAlignment="center"
            android:textSize="30sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/level1QuestionParameter2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="-30dp"
            android:layout_toStartOf="@+id/level1QuestionSectionEquals"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/level1QuestionSectionEquals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="30sp"
            android:layout_toStartOf="@+id/level1QuestionSectionAnswer"
            android:fontFamily="sans-serif-black"
            android:text="@string/equals"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/level1QuestionSectionAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@+id/feedbackImageView"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="textStart"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/feedbackImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignStart="@+id/level1NextButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="102dp"
            android:layout_marginEnd="10dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/level1NextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="#FFFFFF"
            android:visibility="invisible"
            app:srcCompat="@drawable/next_button_icon" />

        <ImageButton
            android:id="@+id/level1FinishedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="#FFFFFF"
            android:visibility="invisible"
            app:srcCompat="@drawable/finished_button_icon" />

        <TextView
            android:id="@+id/tryAgainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/incorrectWarning"
            android:textAlignment="center"
            android:textColor="#E44141"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/wellDoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/wellDone"
            android:textAlignment="center"
            android:textColor="#38C12A"
            android:textSize="20sp"
            android:visibility="invisible" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>